bug with maven -- vm crash when running tests